# vmnl

./: .gitignore  Cargo.toml  LICENSE  README.md  run  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/vmnl/: Cargo.toml
crates/vmnl/src/: lib.rs
crates/vmnl_audio/: Cargo.toml
crates/vmnl_audio/src/audio/: bus.rs  decoder.rs  device.rs  error.rs  mixer.rs  mod.rs  runtime.rs
crates/vmnl_audio/src/audio/music/: handle.rs  mod.rs  stream.rs
crates/vmnl_audio/src/audio/sound/: handle.rs  mod.rs  voice.rs
crates/vmnl_graphics/: Cargo.toml
crates/vmnl_graphics/src/: exception.rs  lib.rs  vmnl_instance.rs
crates/vmnl_graphics/src/2d/: mod.rs  render_item.rs  vector.rs  vertex.rs
crates/vmnl_graphics/src/2d/shape/: indexed.rs  line.rs  mod.rs  rect.rs  triangle.rs
crates/vmnl_graphics/src/3d/: camera.rs  mod.rs  render_item.rs  vector.rs  vertex.rs
crates/vmnl_graphics/src/3d/mesh/: mod.rs
crates/vmnl_graphics/src/common/: buffer.rs  color.rs  geometry.rs  mod.rs  pipeline.rs
crates/vmnl_graphics/src/graphics/: buffer.rs  mod.rs  render_item.rs
crates/vmnl_graphics/src/graphics/shape/: indexed.rs  line.rs  mod.rs  rect.rs  triangle.rs
crates/vmnl_graphics/src/graphics/types/: color.rs  mod.rs  vector.rs  vertex.rs
crates/vmnl_graphics/src/vmnl_instance/: allocator.rs  context.rs  device.rs  mod.rs  physical_device.rs  queue.rs  tests.rs  vulkan_instance.rs
crates/vmnl_graphics/src/window/: builder.rs  config.rs  event.rs  handle.rs  inner.rs  mod.rs  monitors.rs  render.rs  shaders.rs  state.rs
crates/vmnl_graphics/src/window/api/: config.rs  events.rs  lifecycle.rs  mod.rs  polling.rs  render.rs
crates/vmnl_graphics/src/window/inner/: glfw.rs  mod.rs  pipeline.rs  render_target.rs  surface.rs  swapchain.rs
crates/vmnl_graphics/src/window/input/: keyboard.rs  mod.rs  mouse.rs
crates/vmnl_graphics/src/window/render/: acquire.rs  command_buffer.rs  mod.rs  sync.rs
crates/vmnl_graphics/src/window/runtime/: config.rs  handle.rs  mod.rs  state.rs
crates/vmnl_native/: Cargo.toml
crates/vmnl_native/src/: exception.rs  graphics.rs  lib.rs  vmnl_instance.rs  vulkano.rs  window.rs
crates/vmnl_native/src/audio/: bus.rs  decoder.rs  device.rs  error.rs  mixer.rs  mod.rs  runtime.rs
crates/vmnl_native/src/audio/music/: mod.rs  stream.rs
crates/vmnl_native/src/audio/sound/: instance.rs  mod.rs  voice.rs
crates/vmnl_native/src/graphics/: indexded.rs  indexed.rs  mod.rs  rect.rs  vertex.rs  vmnl_instance.rs
crates/vmnl_native/src/graphics/shape/: indexed.rs  line.rs  mod.rs  rect.rs  triangle.rs  vertex.rs
crates/vmnl_native/src/window/: api.rs  config.rs  draw.rs  event.rs  handle.rs  inner.rs  keyboard.rs  mod.rs  monitors.rs  render.rs  shaders.rs  state.rs
crates/vmnl_native/src/window/input/: keyboard.rs  mod.rs  mouse.rs
docs/: README.md  deployment.md  miniaudio_wrapper.md  technology_environment.md  testing_policy.md
examples/test/: Cargo.toml
examples/test/src/: main.rs
src/: main.rs
