[workspace]
members = ["crates/vmnl_graphics", "crates/vmnl", "examples/test"]
default-members = ["crates/vmnl_graphics", "crates/vmnl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.87"
repository = "https://github.com/VMNL/vmnl"
homepage = "https://github.com/VMNL/vmnl"
documentation = "https://docs.rs/vmnl"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
multiple_crate_versions = "allow"
print_stdout = "warn"
print_stderr = "warn"
