[package]
name    = "vmnl"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
description = "VMNL public API crate."

[dependencies]
libc = "0.2.182"
vmnl_native = { path = "../vmnl_native", version = "0.1.0" }

[lib]
crate-type = ["rlib", "cdylib"]
