[package]
name = "vmnl_native"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/vmnl_native"
readme = "../../README.md"
description = "VMNL native backend (Vulkan/GLFW)."
keywords = ["vulkan", "graphics", "glfw", "rendering"]
categories = ["graphics", "rendering", "game-development"]

[lib]
doctest = false

[dependencies]
vulkano         = "0.35.2"
vulkano-shaders = "0.35"
glfw            = { version = "0.62.0", default-features = false, features = ["prebuilt-libs", "raw-window-handle-v0-6", "vulkan", "wayland", "x11"] }
bytemuck        = "1.25.0"
log             = "0.4"
shaderc         = "0.8.3"
smallvec        = "1.15.1"
